--- a/gmclustering_example.ipynb
+++ b/gmclustering_example.ipynb
@@ -33,6 +33,8 @@
    "source": [
     "conda create --name gmclustering_env python=3.11\n",
     "\n",
+    "conda activate gmclustering_env\n",
+    "\n",
     "pip install git+https://github.com/jae1018/GMClustering.git"
    ]
   },
@@ -46,13 +48,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "8fe42c40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: CuPy could not be imported\n",
+      "WARNING: CuPy could not be imported\n",
+      "WARNING: CuPy could not be imported\n"
+     ]
+    }
+   ],
    "source": [
     "# import\n",
-    "from gmclustering import GMClustering\n",
+    "from gmclustering import GMClustering, utils\n",
     "# instantiate\n",
     "gmc = GMClustering()\n",
     "# using example dataset that comes with the package\n",
@@ -97,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "9fd319e3",
    "metadata": {
     "scrolled": false
@@ -172,17 +184,7 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING: CuPy could not be imported\n",
-      "WARNING: CuPy could not be imported\n",
-      "WARNING: CuPy could not be imported\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gmc = GMClustering()"
    ]
@@ -205,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "1e29f5b9",
    "metadata": {
     "scrolled": false
@@ -217,7 +219,7 @@
        "(<Figure size 800x400 with 3 Axes>, <Axes: >)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -261,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "992bb8d0",
    "metadata": {},
    "outputs": [
@@ -525,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "65fa27fa",
    "metadata": {
     "scrolled": false
@@ -534,10 +536,10 @@
     {
      "data": {
       "text/plain": [
-       "(array([0, 1, 2], dtype=int32), array([82108, 48854, 21233]))"
+       "(array([0, 1], dtype=int32), array([75249,  6859]))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
